--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,19 +23,19 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
+<!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        {% endif %} -->
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ site.cv }}">Download<strong>CV (WIP)</strong></a></li>
+          <li><a href="{{ site.twitter }}">Visit <strong>Twitter</strong></a></li>
+          <!-- <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li> -->
         </ul>
         {% endif %}
       </header>
