--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ site.cv }}">Download<strong>CV (WIP)</strong></a></li>
+          <li><a href="{{ site.cv }}">Download<strong>CV</strong></a></li>
           <li><a href="{{ site.twitter }}">Visit <strong>Twitter</strong></a></li>
-          <!-- <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li> -->
+          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
       </header>
