--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -33,9 +33,9 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ site.cv }}">Download<strong>CV</strong></a></li>
+          <li><a href="{{ site.cv }}">Download <strong>CV</strong></a></li>
           <li><a href="{{ site.twitter }}">Visit <strong>Twitter</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="mailto:{{ site.email }}">Email <strong>Me</strong></a></li>
         </ul>
         {% endif %}
       </header>
