--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -41,8 +41,8 @@ a {
 }
 
 a:hover, a:focus {
-  color:#26BA95;
-  // font-weight: bold;
+  color:#267CB9;
+  text-decoration: underline;
 }
 
 a small {
