--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.cv }}">Download <strong>CV</strong></a></li>
-          <li><a href="{{ site.bluesky }}">Visit <strong>BlueSky</strong></a></li>
+          <li><a href="{{ site.bluesky }}">Visit <strong>Bluesky</strong></a></li>
           <li><a href="mailto:{{ site.email }}">Send <strong>Email</strong></a></li>
         </ul>
         {% endif %}
